Setup db and jupyter notebook

--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -13,24 +13,38 @@
    "id": "064ef857",
    "metadata": {},
    "source": [
-    "## Notebook Set Up"
+    "## Notebook Set Up\n",
+    "To import the establishments.json file from Resources, I used the ! special character to run the import within the notebook, along with import the other needed dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3ecdd008",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-31T21:12:52.284-0500\tconnected to: mongodb://localhost/\n",
+      "2024-01-31T21:12:52.285-0500\tdropping: uk_food.establishments\n",
+      "2024-01-31T21:12:53.545-0500\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "\n",
+    "# Import provided establishments.json file from resources\n",
+    "!mongoimport --type json -d uk_food -c establishments --jsonArray --drop Resources/establishments.json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,17 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "18ab463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin',\n",
+      " 'autosaurus',\n",
+      " 'classDB',\n",
+      " 'config',\n",
+      " 'epa',\n",
+      " 'fruits_db',\n",
+      " 'gardenDB',\n",
+      " 'local',\n",
+      " 'met',\n",
+      " 'petsitly_marketing',\n",
+      " 'sample_db',\n",
+      " 'travel_db',\n",
+      " 'uk_food']\n",
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "pprint(mongo.list_database_names())\n",
+    "pprint(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -253,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
