--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -39,9 +39,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-31T21:20:15.926-0500\tconnected to: mongodb://localhost/\n",
-      "2024-01-31T21:20:15.926-0500\tdropping: uk_food.establishments\n",
-      "2024-01-31T21:20:17.216-0500\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+      "2024-01-31T22:09:24.900-0500\tconnected to: mongodb://localhost/\n",
+      "2024-01-31T22:09:24.901-0500\tdropping: uk_food.establishments\n",
+      "2024-01-31T22:09:26.155-0500\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
      ]
     }
    ],
@@ -67,33 +67,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['admin',\n",
-      " 'autosaurus',\n",
-      " 'classDB',\n",
-      " 'config',\n",
-      " 'epa',\n",
-      " 'fruits_db',\n",
-      " 'gardenDB',\n",
-      " 'local',\n",
-      " 'met',\n",
-      " 'petsitly_marketing',\n",
-      " 'sample_db',\n",
-      " 'travel_db',\n",
-      " 'uk_food']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['admin',\n",
+       " 'autosaurus',\n",
+       " 'classDB',\n",
+       " 'config',\n",
+       " 'epa',\n",
+       " 'fruits_db',\n",
+       " 'gardenDB',\n",
+       " 'local',\n",
+       " 'met',\n",
+       " 'petsitly_marketing',\n",
+       " 'sample_db',\n",
+       " 'travel_db',\n",
+       " 'uk_food']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# confirm that our new database was created\n",
-    "pprint(mongo.list_database_names())"
+    "mongo.list_database_names()"
    ]
   },
   {
@@ -109,36 +112,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['establishments']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# review the collections in our new database\n",
-    "pprint(db.list_collection_names())"
+    "db.list_collection_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review the collections in our new database\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -146,32 +142,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': '3 The Droveway',\n",
+      "{'AddressLine1': 'The Bay',\n",
       " 'AddressLine2': 'St Margarets Bay',\n",
       " 'AddressLine3': 'Kent',\n",
       " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Boodles',\n",
+      " 'BusinessName': 'Refreshment Kiosk',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.638929767669,\n",
-      " 'FHRSID': 1349980,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000084064',\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 254719,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DH',\n",
-      " 'RatingDate': '2021-06-14T00:00:00',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-03-24T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('65baffdfc59d4caf03f48403'),\n",
-      " 'geocode': {'latitude': '51.150879', 'longitude': '1.378536'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1349980',\n",
+      " '_id': ObjectId('65bb0b649f0f6463092f2d61'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -219,32 +215,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "new_restaurant_data = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x24c2423c140>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(new_restaurant_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65bb0b6bd4a147677d3d8da1'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': '',\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "query = {'BusinessName':'Penang Flavours'}\n",
+    "establishments.find_one(query)"
    ]
   },
   {
@@ -257,12 +325,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('65bb0b649f0f6463092f2d61')}\n",
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('65bb0b649f0f6463092f2d64')}\n",
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('65bb0b649f0f6463092f2d68')}\n",
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('65bb0b649f0f6463092f2d6a')}\n",
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('65bb0b649f0f6463092f2d6c')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "fields = {'BusinessTypeID': 1, 'BusinessType': 1}\n",
+    "results = list(establishments.find(query, fields))\n",
+    "for item in results[:5]:\n",
+    "    pprint(item)\n"
    ]
   },
   {
