--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -39,9 +39,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-31T22:09:24.900-0500\tconnected to: mongodb://localhost/\n",
-      "2024-01-31T22:09:24.901-0500\tdropping: uk_food.establishments\n",
-      "2024-01-31T22:09:26.155-0500\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+      "2024-02-01T10:28:13.017-0500\tconnected to: mongodb://localhost/\n",
+      "2024-02-01T10:28:13.019-0500\tdropping: uk_food.establishments\n",
+      "2024-02-01T10:28:15.122-0500\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        " 'uk_food']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "['establishments']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('65bb0b649f0f6463092f2d61'),\n",
+      " '_id': ObjectId('65bbb88dc499092f151a3874'),\n",
       " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
       "            'rel': 'self'}],\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -253,17 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x24c2423c140>"
+       "<pymongo.results.InsertOneResult at 0x2c724f92b40>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65bb0b6bd4a147677d3d8da1'),\n",
+       "{'_id': ObjectId('65bbb88fe6cab5c289dd3c77'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': '',\n",
@@ -304,7 +304,7 @@
        " 'NewRatingPending': True}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -335,19 +335,19 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('65bb0b649f0f6463092f2d61')}\n",
+      " '_id': ObjectId('65bbb88dc499092f151a3874')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('65bb0b649f0f6463092f2d64')}\n",
+      " '_id': ObjectId('65bbb88dc499092f151a3875')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('65bb0b649f0f6463092f2d68')}\n",
+      " '_id': ObjectId('65bbb88dc499092f151a3878')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('65bb0b649f0f6463092f2d6a')}\n",
+      " '_id': ObjectId('65bbb88dc499092f151a3879')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('65bb0b649f0f6463092f2d6c')}\n"
+      " '_id': ObjectId('65bbb88dc499092f151a387b')}\n"
      ]
     }
    ],
@@ -370,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x24c25a89500>"
+       "<pymongo.results.UpdateResult at 0x2c725ec7540>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65bb0b6bd4a147677d3d8da1'),\n",
+       "{'_id': ObjectId('65bbb88fe6cab5c289dd3c77'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': '1',\n",
@@ -422,7 +422,7 @@
        " 'NewRatingPending': True}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -453,41 +453,41 @@
        "994"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
-    "establishments.count_documents({'LocalAuthorityName':'Dover'})"
+    "establishments.count_documents({'LocalAuthorityName':{'$regex':'Dover'}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x24c24a8c680>"
+       "<pymongo.results.DeleteResult at 0x2c725eaf080>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
-    "establishments.delete_many({'LocalAuthorityName':'Dover'})"
+    "establishments.delete_many({'LocalAuthorityName':{'$regex':'Dover'}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -497,26 +497,26 @@
        "0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check if any remaining documents include Dover\n",
-    "establishments.count_documents({'LocalAuthorityName':'Dover'})"
+    "establishments.count_documents({'LocalAuthorityName':{'$regex':'Dover'}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65bb0b649f0f6463092f3047'),\n",
+       "{'_id': ObjectId('65bbb88dc499092f151a3b5b'),\n",
        " 'FHRSID': 1043695,\n",
        " 'ChangesByServerID': 0,\n",
        " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
@@ -554,7 +554,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,12 +584,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x2c727cc7580>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.geocode.update_many({},\n",
+    "                                   [\n",
+    "                                       {'$set':{'latitude':{'$toDecimal':'$latitude'}}},\n",
+    "                                       {'$set':{'longitude':{'$toDecimal':'$longitude'}}}\n",
+    "                                    ]\n",
+    ")"
    ]
   },
   {
