--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -584,27 +584,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2c727cc7580>"
+       "<pymongo.results.UpdateResult at 0x2c728557400>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Change the data type from String to Decimal for longitude and latitude\n",
-    "establishments.geocode.update_many({},\n",
+    "establishments.update_many({},\n",
     "                                   [\n",
-    "                                       {'$set':{'latitude':{'$toDecimal':'$latitude'}}},\n",
-    "                                       {'$set':{'longitude':{'$toDecimal':'$longitude'}}}\n",
+    "                                       {'$set':{'geocode.latitude':{'$toDouble':'$geocode.latitude'},'geocode.longitude':{'$toDouble':'$geocode.longitude'}}}\n",
     "                                    ]\n",
     ")"
    ]
@@ -620,10 +619,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x2c727ccfa40>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -632,23 +642,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x2c727ccee40>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, \n",
+    "                           [\n",
+    "                               {'$set': {'RatingValue':{'$toInt':'$RatingValue'}}}\n",
+    "                            ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0deacaf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65bbb88dc499092f151a3b5b'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': 5,\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check that the coordinates and rating value are now numbers\n",
+    "establishments.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "09e00a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65bbb88dc499092f151a3b5b'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': 5,\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "establishments.find_one({'geocode.latitude':{'$type':1}})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0deacaf9",
+   "id": "cb4f5a5d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
