--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -13,26 +13,15 @@
    "id": "064ef857",
    "metadata": {},
    "source": [
-    "## Notebook Set Up\n",
-    "To import the establishments.json file from Resources, I used the ! special character to run the import within the notebook, along with import the other needed dependencies"
+    "## Notebook Set Up\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "3ecdd008",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-01-31T21:12:52.284-0500\tconnected to: mongodb://localhost/\n",
-      "2024-01-31T21:12:52.285-0500\tdropping: uk_food.establishments\n",
-      "2024-01-31T21:12:53.545-0500\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
@@ -43,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -65,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [
@@ -73,19 +62,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin',\n",
-      " 'autosaurus',\n",
-      " 'classDB',\n",
-      " 'config',\n",
-      " 'epa',\n",
-      " 'fruits_db',\n",
-      " 'gardenDB',\n",
-      " 'local',\n",
-      " 'met',\n",
-      " 'petsitly_marketing',\n",
-      " 'sample_db',\n",
-      " 'travel_db',\n",
-      " 'uk_food']\n",
       "['establishments']\n"
      ]
     }
@@ -97,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -128,16 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
-    "\n",
+    "query = {'scores.Hygiene':20}\n",
+    "results = establishments.find(query)\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
+    "print(establishments.count_documents(query))\n",
     "# Display the first document in the results using pprint\n"
    ]
   },
