--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -601,10 +601,9 @@
    ],
    "source": [
     "# Change the data type from String to Decimal for longitude and latitude\n",
-    "establishments.update_many({},\n",
-    "                                   [\n",
-    "                                       {'$set':{'geocode.latitude':{'$toDouble':'$geocode.latitude'},'geocode.longitude':{'$toDouble':'$geocode.longitude'}}}\n",
-    "                                    ]\n",
+    "establishments.update_many({},[\n",
+    "                                {'$set':{'geocode.latitude':{'$toDouble':'$geocode.latitude'},'geocode.longitude':{'$toDouble':'$geocode.longitude'}}}\n",
+    "                                ]\n",
     ")"
    ]
   },
@@ -659,10 +658,9 @@
    ],
    "source": [
     "# Change the data type from String to Integer for RatingValue\n",
-    "establishments.update_many({}, \n",
-    "                           [\n",
-    "                               {'$set': {'RatingValue':{'$toInt':'$RatingValue'}}}\n",
-    "                            ]\n",
+    "establishments.update_many({},[\n",
+    "                                {'$set': {'RatingValue':{'$toInt':'$RatingValue'}}}\n",
+    "                                ]\n",
     ")"
    ]
   },
