--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -630,27 +630,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "754f3186",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1254"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "london_df.size"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 68,
    "id": "07e24ccb",
    "metadata": {},
@@ -1077,23 +1056,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'AddressLine1': '130 - 132 Plumstead High Street',\n",
+      "  'AddressLine2': '',\n",
+      "  'AddressLine3': 'Plumstead',\n",
+      "  'AddressLine4': 'Greenwich',\n",
+      "  'BusinessName': 'Volunteer',\n",
+      "  'BusinessType': 'Pub/bar/nightclub',\n",
+      "  'BusinessTypeID': 7843,\n",
+      "  'ChangesByServerID': 0,\n",
+      "  'Distance': 4646.965634598608,\n",
+      "  'FHRSID': 694609,\n",
+      "  'LocalAuthorityBusinessID': 'PI/000116619',\n",
+      "  'LocalAuthorityCode': '511',\n",
+      "  'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      "  'LocalAuthorityName': 'Greenwich',\n",
+      "  'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      "  'NewRatingPending': False,\n",
+      "  'Phone': '',\n",
+      "  'PostCode': 'SE18 1JQ',\n",
+      "  'RatingDate': '2019-08-05T00:00:00',\n",
+      "  'RatingKey': 'fhrs_5_en-gb',\n",
+      "  'RatingValue': 5,\n",
+      "  'RightToReply': '',\n",
+      "  'SchemeType': 'FHRS',\n",
+      "  '_id': ObjectId('65bbb88ec499092f151aaeec'),\n",
+      "  'geocode': {'latitude': 51.4873437, 'longitude': 0.09208},\n",
+      "  'links': [{'href': 'http://api.ratings.food.gov.uk/establishments/694609',\n",
+      "             'rel': 'self'}],\n",
+      "  'meta': {'dataSource': None,\n",
+      "           'extractDate': '0001-01-01T00:00:00',\n",
+      "           'itemCount': 0,\n",
+      "           'pageNumber': 0,\n",
+      "           'pageSize': 0,\n",
+      "           'returncode': None,\n",
+      "           'totalCount': 0,\n",
+      "           'totalPages': 0},\n",
+      "  'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}},\n",
+      " {'AddressLine1': 'Plumstead Manor School Old Mill Road',\n",
+      "  'AddressLine2': '',\n",
+      "  'AddressLine3': 'Plumstead',\n",
+      "  'AddressLine4': 'Greenwich',\n",
+      "  'BusinessName': 'Plumstead Manor Nursery',\n",
+      "  'BusinessType': 'Caring Premises',\n",
+      "  'BusinessTypeID': 5,\n",
+      "  'ChangesByServerID': 0,\n",
+      "  'Distance': 4646.9740101340385,\n",
+      "  'FHRSID': 695241,\n",
+      "  'LocalAuthorityBusinessID': 'PI/000179088',\n",
+      "  'LocalAuthorityCode': '511',\n",
+      "  'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      "  'LocalAuthorityName': 'Greenwich',\n",
+      "  'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      "  'NewRatingPending': False,\n",
+      "  'Phone': '',\n",
+      "  'PostCode': 'SE18 1QG',\n",
+      "  'RatingDate': '2021-06-16T00:00:00',\n",
+      "  'RatingKey': 'fhrs_5_en-gb',\n",
+      "  'RatingValue': 5,\n",
+      "  'RightToReply': '',\n",
+      "  'SchemeType': 'FHRS',\n",
+      "  '_id': ObjectId('65bbb88ec499092f151aaf05'),\n",
+      "  'geocode': {'latitude': 51.481517791748, 'longitude': 0.0859939977526665},\n",
+      "  'links': [{'href': 'http://api.ratings.food.gov.uk/establishments/695241',\n",
+      "             'rel': 'self'}],\n",
+      "  'meta': {'dataSource': None,\n",
+      "           'extractDate': '0001-01-01T00:00:00',\n",
+      "           'itemCount': 0,\n",
+      "           'pageNumber': 0,\n",
+      "           'pageSize': 0,\n",
+      "           'returncode': None,\n",
+      "           'totalCount': 0,\n",
+      "           'totalPages': 0},\n",
+      "  'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 0}},\n",
+      " {'AddressLine1': '144 - 146 Plumstead High Street',\n",
+      "  'AddressLine2': '',\n",
+      "  'AddressLine3': 'Plumstead',\n",
+      "  'AddressLine4': 'Greenwich',\n",
+      "  'BusinessName': 'Iceland',\n",
+      "  'BusinessType': 'Retailers - supermarkets/hypermarkets',\n",
+      "  'BusinessTypeID': 7840,\n",
+      "  'ChangesByServerID': 0,\n",
+      "  'Distance': 4646.946071297699,\n",
+      "  'FHRSID': 695223,\n",
+      "  'LocalAuthorityBusinessID': 'PI/000178842',\n",
+      "  'LocalAuthorityCode': '511',\n",
+      "  'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      "  'LocalAuthorityName': 'Greenwich',\n",
+      "  'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      "  'NewRatingPending': False,\n",
+      "  'Phone': '',\n",
+      "  'PostCode': 'SE18 1JQ',\n",
+      "  'RatingDate': '2019-11-13T00:00:00',\n",
+      "  'RatingKey': 'fhrs_5_en-gb',\n",
+      "  'RatingValue': 5,\n",
+      "  'RightToReply': '',\n",
+      "  'SchemeType': 'FHRS',\n",
+      "  '_id': ObjectId('65bbb88ec499092f151aaebe'),\n",
+      "  'geocode': {'latitude': 51.4871482849121, 'longitude': 0.0924199968576431},\n",
+      "  'links': [{'href': 'http://api.ratings.food.gov.uk/establishments/695223',\n",
+      "             'rel': 'self'}],\n",
+      "  'meta': {'dataSource': None,\n",
+      "           'extractDate': '0001-01-01T00:00:00',\n",
+      "           'itemCount': 0,\n",
+      "           'pageNumber': 0,\n",
+      "           'pageSize': 0,\n",
+      "           'returncode': None,\n",
+      "           'totalCount': 0,\n",
+      "           'totalPages': 0},\n",
+      "  'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}},\n",
+      " {'AddressLine1': '152 Plumstead High Street',\n",
+      "  'AddressLine2': '',\n",
+      "  'AddressLine3': 'Plumstead',\n",
+      "  'AddressLine4': 'Greenwich',\n",
+      "  'BusinessName': 'TIWA N TIWA African Restaurant Ltd',\n",
+      "  'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  'ChangesByServerID': 0,\n",
+      "  'Distance': 4646.930146257832,\n",
+      "  'FHRSID': 1069652,\n",
+      "  'LocalAuthorityBusinessID': 'PI/000206841',\n",
+      "  'LocalAuthorityCode': '511',\n",
+      "  'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      "  'LocalAuthorityName': 'Greenwich',\n",
+      "  'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      "  'NewRatingPending': False,\n",
+      "  'Phone': '',\n",
+      "  'PostCode': 'SE18 1JQ',\n",
+      "  'RatingDate': '2020-10-24T00:00:00',\n",
+      "  'RatingKey': 'fhrs_5_en-gb',\n",
+      "  'RatingValue': 5,\n",
+      "  'RightToReply': '',\n",
+      "  'SchemeType': 'FHRS',\n",
+      "  '_id': ObjectId('65bbb88ec499092f151aae96'),\n",
+      "  'geocode': {'latitude': 51.4870351, 'longitude': 0.0927429},\n",
+      "  'links': [{'href': 'http://api.ratings.food.gov.uk/establishments/1069652',\n",
+      "             'rel': 'self'}],\n",
+      "  'meta': {'dataSource': None,\n",
+      "           'extractDate': '0001-01-01T00:00:00',\n",
+      "           'itemCount': 0,\n",
+      "           'pageNumber': 0,\n",
+      "           'pageSize': 0,\n",
+      "           'returncode': None,\n",
+      "           'totalCount': 0,\n",
+      "           'totalPages': 0},\n",
+      "  'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}},\n",
+      " {'AddressLine1': 'Restaurant And Premises 107A Plumstead High Street',\n",
+      "  'AddressLine2': '',\n",
+      "  'AddressLine3': 'Plumstead',\n",
+      "  'AddressLine4': 'Greenwich',\n",
+      "  'BusinessName': 'Howe and Co Fish and Chips - Van 17',\n",
+      "  'BusinessType': 'Mobile caterer',\n",
+      "  'BusinessTypeID': 7846,\n",
+      "  'ChangesByServerID': 0,\n",
+      "  'Distance': 4646.95593107927,\n",
+      "  'FHRSID': 1380578,\n",
+      "  'LocalAuthorityBusinessID': '14425',\n",
+      "  'LocalAuthorityCode': '511',\n",
+      "  'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      "  'LocalAuthorityName': 'Greenwich',\n",
+      "  'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      "  'NewRatingPending': False,\n",
+      "  'Phone': '',\n",
+      "  'PostCode': 'SE18 1SE',\n",
+      "  'RatingDate': '2021-11-11T00:00:00',\n",
+      "  'RatingKey': 'fhrs_5_en-gb',\n",
+      "  'RatingValue': 5,\n",
+      "  'RightToReply': '',\n",
+      "  'SchemeType': 'FHRS',\n",
+      "  '_id': ObjectId('65bbb88ec499092f151aaed2'),\n",
+      "  'geocode': {'latitude': 51.4875335693359, 'longitude': 0.0925370007753372},\n",
+      "  'links': [{'href': 'http://api.ratings.food.gov.uk/establishments/1380578',\n",
+      "             'rel': 'self'}],\n",
+      "  'meta': {'dataSource': None,\n",
+      "           'extractDate': '0001-01-01T00:00:00',\n",
+      "           'itemCount': 0,\n",
+      "           'pageNumber': 0,\n",
+      "           'pageSize': 0,\n",
+      "           'returncode': None,\n",
+      "           'totalCount': 0,\n",
+      "           'totalPages': 0},\n",
+      "  'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}]\n"
+     ]
+    }
+   ],
    "source": [
     "# Search within 0.01 degree on either side of the latitude and longitude.\n",
     "# Rating value must equal 5\n",
     "# Sort by hygiene score\n",
     "\n",
     "degree_search = 0.01\n",
-    "latitude = establishments.find_one()\n",
-    "longitude = \n",
+    "latitude = 51.490142 # establishments.find({'BusinessName':'Penang Flavours'},{'geocode.latitude':1})\n",
+    "longitude = 0.08384 # establishments.find({'BusinessName':'Penang Flavours'},{'geocode.longitude':1})\n",
     "\n",
-    "query = \n",
-    "sort =  \n",
+    "query = {'RatingValue': {'$eq':5},\n",
+    "         'geocode.latitude':{'$lte':latitude + degree_search},\n",
+    "         'geocode.latitude':{'$gte':latitude - degree_search},\n",
+    "         'geocode.longitude':{'$gte':longitude - degree_search},\n",
+    "         'geocode.longitude':{'$lte':longitude + degree_search}\n",
+    "}\n",
+    "sort = [('score.Hygiene', -1)]\n",
     "\n",
-    "# Print the results\n"
+    "# Print the results\n",
+    "results = list(establishments.find(query).sort(sort).limit(5))\n",
+    "pprint(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b70b159d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "02532c21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pymongo.cursor.Cursor object at 0x000001E479C90550>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(establishments.find({'BusinessName':'Penang Flavours'},{'geocode.latitude':1}))"
    ]
   },
   {
@@ -1144,8 +1343,8 @@
     "# 2. Groups the matches by Local Authority\n",
     "# 3. Sorts the matches from highest to lowest\n",
     "match_q = {'$match': {'scores.Hygiene': 0}}\n",
-    "group_q = {'$group': {'_id': '$LocalAuthorityName', 'count': { '$sum': 1 }}}\n",
-    "sort_q = {'$sort': { 'count': -1 }}\n",
+    "group_q = {'$group': {'_id': '$LocalAuthorityName', 'count': {'$sum': 1 }}}\n",
+    "sort_q = {'$sort': {'count': -1 }}\n",
     "pipeline = [match_q, group_q, sort_q]\n",
     "# Print the number of documents in the result\n",
     "results = list(establishments.aggregate(pipeline))\n",
@@ -1156,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "id": "d8aab364",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows in DataFrame:  55\n"
+      "Rows in DataFrame: 55\n"
      ]
     },
     {
@@ -1218,20 +1417,50 @@
        "      <td>Swale</td>\n",
        "      <td>686</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chelmsford</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Medway</td>\n",
+       "      <td>672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bexley</td>\n",
+       "      <td>607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Southend-On-Sea</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tendring</td>\n",
+       "      <td>542</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         _id  count\n",
-       "0     Thanet   1130\n",
-       "1  Greenwich    882\n",
-       "2  Maidstone    713\n",
-       "3     Newham    711\n",
-       "4      Swale    686"
+       "               _id  count\n",
+       "0           Thanet   1130\n",
+       "1        Greenwich    882\n",
+       "2        Maidstone    713\n",
+       "3           Newham    711\n",
+       "4            Swale    686\n",
+       "5       Chelmsford    680\n",
+       "6           Medway    672\n",
+       "7           Bexley    607\n",
+       "8  Southend-On-Sea    586\n",
+       "9         Tendring    542"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,9 +1469,9 @@
     "# Convert the result to a Pandas DataFrame\n",
     "bad_hygiene_df = pd.DataFrame(results)\n",
     "# Display the number of rows in the DataFrame\n",
-    "print(\"Rows in DataFrame: \", len(bad_hygiene_df))\n",
+    "print(f'Rows in DataFrame: {len(bad_hygiene_df)}')\n",
     "# Display the first 10 rows of the DataFrame\n",
-    "bad_hygiene_df.head(5)\n"
+    "bad_hygiene_df.head(10)\n"
    ]
   }
  ],
